# mcp_merge_request_summarizer

./: .gitignore  INSTALLATION_GUIDE.md  LICENSE  Makefile  PUBLISHING.md  QUICK_START.md  README.md  WORKING_DIRECTORY_GUIDE.md  install.bat  install.ps1  install.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: publish.yml  test.yml
configs/: README.md  claude_desktop_config.json  cursor_settings.json  gemini_config.json
examples/: mcp_config.json  simplified_api_usage.md  usage_examples.md
src/mcp_mr_summarizer/: __init__.py  analyzer.py  cli.py  config.py  models.py  resources.py  server.py  tools.py
tests/: __init__.py  test_analyzer.py  test_cli.py  test_debug.py  test_resources.py  test_tools.py
